--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
 
 
 .gazou1 img{
-box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+/* box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1); */
     margin-top:60px;
     width: 100%;
 
