--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    overflow:　auto;
 
 }
 
@@ -11,72 +12,38 @@ body{
     font-family:'Helvetica',sans-serif;
     font-weight: 100;
     
-}
-
-.gazou1{
-    background-color: #f8f8ff;
-    /* display:flex; */
-    /* justify-content: center; */
-    /* padding: 50px 50px; */
-    width: 100%;
-    margin: 0 auto;
- }
-.hide1{
-    width: 100%;
-}
-
-
-
-.gazou1 img{
-/* box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1); */
-    margin-top:60px;
-    width: 100%;
-
-
-}
-
-.gaiyou{
-    border:solid 1px #dce4ec;
-    line-height: 40px;
-    padding: 20px;
-    width: 100%;
-    margin: 0 auto;
-    /* width: 750px; */
- 
+    
     
 }
-.gazou2{
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+/**************ヘッダー **************/
+
+.header{
+    background-color: white;
+}
+
+.header-left h2{
     width:100%;
+    text-align: start;
 }
-    
 
 .socialbtn{
     list-style: none;
-    position: absolute;
-    top:30px;
-    right: 40px;
     display: flex;
+    justify-content:flex-end;
     
-    
-   
 }
-
 
 .socialbtn img{
     max-width: 33px;
-    padding:20px;
+    padding:0px;
+
     
 }
-
-.my-color{
-    color: gray;
-}
-   
-  
-
-
-
-
 
 
 
@@ -84,113 +51,117 @@ body{
     display: flex;
     list-style: none;
     justify-content: flex-end;
-    margin-top: 130px;
- 
-}
+    margin-top: 10px;
+    
+ }
 
-
-.header-right li{
-    /* padding: 20px; */
-    margin-right: 60px;
-  
-}
+ .list li{
+     padding-right: 10px;
+ }
 
 .header-right a{
     color: #000;
     text-decoration: none;
     font-size: 14px;
 }
+/**************メイン**************/
 
+.gazou1{
+    background-color:#f5f5f5;
+    display:flex;  
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto; 
+ }
 
-.header-left{
-    margin-bottom: 50px;
-    position: relative;
-    top: 50px;
-
-}
-
-
-.header-left h2{
-font-size: 30px;
-padding-left: 50px;
-
-
-
-}
-.header{
-    height: 200px;
+ .gazou1 img{
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);  
+    margin-top:60px;
    
-}
 
-
-
-
-.centeralignment{
-    /* display: flex; */
-    /* justify-content: center; */
-    line-height: 50px;
-    padding: 10px;
-    width:100%;
-    margin: 0 auto;
-    /* text-align:left; */
-    
-}
-
-.flex-contianer1{
-   
-    margin: 0 auto;
-    text-align:left;
-}
-
-.flex-contianer2{
-    /* width: 780px; */
-    margin: 0 auto;
-    text-align:left;
-}
-
-.centeralignment p{
-font-size: 20px;
-}
-
-
-.technology li{
-     list-style:none;
  }
 
 
 
-
-
  .apps p{
-    line-height: 0.1px;
-    margin-bottom: 40px;
+    line-height: 40px;
+    margin:0 10px;
 
 }
-  
-.apps span{
-    color: #a9a9a9;
+
+
+.centeralignment{
+    line-height: 50px; 
+    padding: 10px;
+    text-align:left;
+    
+    
+} 
+
+
+.gaiyou{
+    border:solid 1px;
+    padding: 10px; 
+   
+
 }
 
 
-.icon-p{
-    padding-left: 98px;
+.gaiyou1{
+    text-align:center;
+    line-height: 40px;
+    
+    
 }
 
-
-.end{
-    margin: 40px;
+.gaiyou1 h2{
+    text-align: left;
 }
 
-.icon_man:before {
+.gaiyou1 img{
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);  
+
+    
+}
+
+.gazou3 img{
+    display: flex;
+    justify-content: center;
+    width: 70%;
+    margin: 0 auto;
+   
+}
+
+.icon_man::before {
     content: url(/Users/takadayuuko/Desktop/hide.site/images/icons8-github-96.png) ;
     position : relative ;
-    bottom : -3em ;
-    right: 1em;
-    margin-right : 0.1em ;
+    right: 0.5em;
+    
+}
+.appman {
+    position: absolute;
+    padding-top: 10px;
 }
 
    
-/* 1/3 */
-/* メインのCSSで width: XXXpx というように固定値で幅を指定している要素は、 */
-/* メディアクエリ内で width: XXX% というように親要素に対する相対値で指定しなおす。 */
-→メインcssでpx指定しているものは削除した。(コメントアウト)
+
+
+
+
+
+
+
+/**************フッター**************/
+.end{ 
+   background-color: #696969;
+}
+
+
+
+
+
+
+   
+
+git 今book.
+
