--- a/responsive.css
+++ b/responsive.css
@@ -19,7 +19,8 @@ img{
 }
 
 
-/* /*****************************************************s */
+
+/*****************************************************s */
 @media (min-width:768px){
     .header-left h2{
         width:100%;
@@ -52,34 +53,46 @@ img{
 
     .header-right a{
         font-size: 0.8em;
-        padding: 20px;
+        padding-left: 20px;
 
     }
 
-    .socialbtn img{
-        min-width: 40px;
-        padding:10px;
     
-    }
+
+    
+    
+
+    
+
+
 
     .gazou1 img{
-        width: 60%;
-        margin-top: 10px;
+        max-width:100%;
+        margin: 40px;
     }
 
     
 
     .gaiyou1 img{
-        width: 60%;
+       width: 100%;
+        height: auto;
+        background-color: red;
+
+    }
+
+
+    .gazou2{
+        margin: 40px;
     }
 
     .centeralignment{
-        width: 70%;
+        width: 50%;
         margin: 0 auto;
     }
 
     .header-left h2{
         text-align: start;
+        margin-top: 20px;
 
     }
 
@@ -87,6 +100,6 @@ img{
 
 
 
+ 
 
-
-
+ 
