--- a/styleのコピー.css
+++ b/styleのコピー.css
@@ -10,8 +10,9 @@
 
 body{
 
-    /* font-family:'Helvetica',sans-serif; */
-    font-family: "Noto Sans Japanese",sans-serif;
+    font-family:'Helvetica',sans-serif;
+    /* font-family: "Noto Sans Japanese",sans-serif; */
+
     font-weight: 280;
     
     
@@ -34,7 +35,6 @@ img{
 .header-left h2{
     width:100%;
     text-align: start;
-    margin-left: 100px;
     font-family:'Osaka',sans-serif;
     font-weight:bold;
 }
@@ -108,7 +108,7 @@ img{
 
 .centeralignment{
     line-height: 40px; 
-    padding: 15px;
+    padding: 30px;
     text-align:left;
     
     
@@ -124,14 +124,14 @@ img{
     font-size: 18px;
 }
 
-
+/* .learning{
+    margin-top: 30px;} */
 
 
 
 
 .gaiyou{
-    border:solid 1px #c0c0c0;
-    border-radius: 5px;
+    border:solid 1px;
     padding: 10px; 
    
 
@@ -179,67 +179,9 @@ img{
 .senn{
     margin-left:25%;
     margin-right:25%; 
-    margin-top: 25px;
-    margin-bottom: 25px; 
     border-top: 1.5px dashed #c0c0c0;
-
   
 }
-
-.snsbutton{
-    border: solid  1px  #c0c0c0;
-    padding: 20px;
-    margin-top:30px;
-    margin-bottom: 30px;
-    border-radius: 5px;
-
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content:center;
- }
-
-.snsbutton a{
-    color: #fff;
-    text-decoration: none;
-}
-
-
-
-.submit {
-    
-    width: 240px;
-    height: 45px;
-    font-family:'Helvetica',sans-serif;
-    font-size: 15px;
-    /* text-transform: uppercase; */
-    
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #fff;
-    background-color: #000000;
-    border: none;
-    border-radius: 15px;
-    /* box-shadow: 0px 15px 20px red(46, 229, 157, 0.4); */
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    margin-left: 60px;
-   
-
-
-    }
-  
-  .submit:hover {
-    background-color: #fff;
-    box-shadow: 0px 15px 20px #a9a9a9(46, 229, 157, 0.4);
-    color: #000000;
-    transform: translateY(-7px);
-  }
-  
-  
-  
-
 
 
 
