--- a/style.css
+++ b/style.css
@@ -34,9 +34,11 @@ img{
 .header-left h2{
     width:100%;
     text-align: start;
-    margin-left: 100px;
-    font-family:'Osaka',sans-serif;
+    margin-left: 70px;
+    font-family:"Noto Sans Japanese",sans-serif;
     font-weight:bold;
+    color: #696969;
+    
 }
 
 .socialbtn{
@@ -220,11 +222,12 @@ img{
     background-color: #000000;
     border: none;
     border-radius: 15px;
-    /* box-shadow: 0px 15px 20px red(46, 229, 157, 0.4); */
+    box-shadow: 4px 4px 4px 4px #bbb;   /* 影指定 */
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
     margin-left: 60px;
+    
    
 
 
@@ -232,9 +235,10 @@ img{
   
   .submit:hover {
     background-color: #fff;
-    box-shadow: 0px 15px 20px #a9a9a9(46, 229, 157, 0.4);
+    /* box-shadow: 0px 15px 20px #a9a9a9(46, 229, 157, 0.4); */
     color: #000000;
-    transform: translateY(-7px);
+    transform: translateY(-1px);
+   
   }
   
   
@@ -242,8 +246,17 @@ img{
 
 
 
+  .learning .rireki{
+      font-weight: bold;
+      border-bottom: solid 1px;
+     
+
+  }
 
 
+  .learning p{
+      padding-top: 20px;
+  }
 
 
 /**************フッター**************/
